--- a/dataSearch/index.html
+++ b/dataSearch/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <title>test</title>
-    <link rel="stylesheet" href="./layui/css/layui.css" />
+    <link rel="stylesheet" href="../layui/css/layui.css" />
   </head>
   <body>
     <div class="layui-layout layui-layout-admin">
@@ -16,7 +16,7 @@
         <!-- 头部区域（可配合layui 已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
           <li class="layui-nav-item layui-hide-xs"><a href="">信息展示</a></li>
-          <li class="layui-nav-item layui-hide-xs"><a href="">查询</a></li>
+          <li class="layui-nav-item layui-hide-xs  layui-nav-itemed"><a href="">查询</a></li>
           <li class="layui-nav-item layui-hide-xs"><a href="">预测</a></li>
         </ul>
         <ul class="layui-nav layui-layout-right">
@@ -37,10 +37,10 @@
           </li>
         </ul>
       </div>
-      <div class="layui-body" style="left: 0">
+      <div class="layui-body">
         <div style="padding: 15px"></div>
       </div>
     </div>
-    <script src="./layui/layui.js"></script>
+    <script src="../layui/layui.js"></script>
   </body>
 </html>
