--- a/dataSearch/index.html
+++ b/dataSearch/index.html
@@ -8,6 +8,7 @@
     />
     <title>test</title>
     <link rel="stylesheet" href="../layui/css/layui.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="layui-layout layui-layout-admin">
@@ -16,14 +17,14 @@
         <!-- 头部区域（可配合layui 已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
           <li class="layui-nav-item layui-hide-xs"><a href="">信息展示</a></li>
-          <li class="layui-nav-item layui-hide-xs  layui-nav-itemed"><a href="">查询</a></li>
+          <li class="layui-nav-item layui-hide-xs layui-nav-itemed">
+            <a href="">查询</a>
+          </li>
           <li class="layui-nav-item layui-hide-xs"><a href="">预测</a></li>
         </ul>
         <ul class="layui-nav layui-layout-right">
           <li class="layui-nav-item layui-hide layui-show-md-inline-block">
-            <a href="javascript:;">
-              tester
-            </a>
+            <a href="javascript:;"> tester </a>
             <dl class="layui-nav-child">
               <dd><a href="">Your Profile</a></dd>
               <dd><a href="">Settings</a></dd>
@@ -37,10 +38,22 @@
           </li>
         </ul>
       </div>
-      <div class="layui-body">
-        <div style="padding: 15px"></div>
+      <div class="layui-body" style="left: 0">
+        <div class="search">
+          <table class="search_table" lay-filter="test"></table>
+        </div>
       </div>
     </div>
+    <div id="colBar">
+      <a class="layui-btn layui-btn-xs" lay-event="detail">查看</a>
+    </div>
+    <div id="headBar">
+        <input type="text" name="title" placeholder="请输入标题" class="layui-input header-input">
+        <button class="layui-btn layui-btn-normal header-button">搜索</button>
+    </div>
+    <div class="detail_page"></div>
     <script src="../layui/layui.js"></script>
+    <script src="./js/jQuery.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
